adds bookmark get api, needs tests
